--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodie Zag</title>
-    <link rel="stylesheet" href="../build.css">
+    <!-- <link rel="stylesheet" href="../build.css"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <h1 class=" text-red-500 font-bold  text-4xl text-center mt-6 ">Hello world</h1>
+<body class="bg-lime-200">
+    <nav class="bg-white rounded text-center">
+        <div class="text-center">
+            <p class="italic text-8xl pt-5 cursor-pointer hover:text-rose-700 font-bold ">Foodie Zag</p>
+        </div>
+        <div class="text-center">
+            <ul class="flex space-x-3">
+                <li class=" pt-5 pb-5 text-xl italic cursor-pointer hover:text-yellow-500   ">
+                    Our Menus
+                </li>
+                <li class=" pt-5 pb-5 text-xl italic cursor-pointer hover:text-yellow-500  ">
+                    Contact us
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
 
 </body>
 
