--- a/public/index.html
+++ b/public/index.html
@@ -8,25 +8,40 @@
     <title>Foodie Zag</title>
     <!-- <link rel="stylesheet" href="../build.css"> -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./mypage.css">
 </head>
 
 <body class="bg-lime-200">
-    <nav class="bg-white rounded text-center">
+    <nav class="bg-white rounded text-center shadow-lg">
         <div class="text-center">
-            <p class="italic text-8xl pt-5 cursor-pointer hover:text-rose-700 font-bold ">Foodie Zag</p>
+            <p class="italic text-8xl pt-9 cursor-pointer hover:text-rose-700 font-bold main ">Foodie Zag</p>
         </div>
-        <div class="text-center">
-            <ul class="flex space-x-3">
-                <li class=" pt-5 pb-5 text-xl italic cursor-pointer hover:text-yellow-500   ">
-                    Our Menus
-                </li>
-                <li class=" pt-5 pb-5 text-xl italic cursor-pointer hover:text-yellow-500  ">
-                    Contact us
-                </li>
-            </ul>
+
+        <div class="text-center pt-9 pb-9 space-x-4 menus">
+
+            <a href="http://" class="pt-5 pb-5 text-xl italic cursor-pointer hover:text-yellow-500 ">About Us</a>
+            <a href="http://" class="pt-5 pb-5 text-xl italic cursor-pointer hover:text-yellow-500 ">Our Menus</a>
+            <a href="http://" class="pt-5 pb-5 text-xl italic cursor-pointer hover:text-yellow-500 ">Contact Us</a>
+
+
         </div>
     </nav>
+    <section class="">
+        <header class="flex">
 
+            <p class="text-9xl italic font-bold text-yellow-400 pr-9">Welcome To</p>
+            <br>
+            <p class="text-9xl italic font-bold text-red-700">Foddie Zag
+            </p>
+
+
+            </div>
+            <div class="">
+                <img class=" rounded-lg shadow-lg w-3/4 pt-6  object-right" src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+
+            </div>
+        </header>
+    </section>
 
 
 </body>
